# SoloX

./: .gitignore  DocForAndroid.md  FAQ.md  LICENSE  MANIFEST.in  README.md  README.zh.md  __init__.py  adbTool.py  appMonitor.py  appMonitor_v2.py  consts.py  debug.py  email_performance.py  index.html  index.md  log4py.py  logUtils.py  logcateThread.py  package.sh  performanceTask.py  requirements.txt  run.py  setup.cfg  setup.py  test.txt
.github/workflows/: pypi-publish.yml
app性能介绍/: CPU、内存、GPU测试方法说明.docx  【集成性能测试】手Y android 7.5版本性能测试报告.msg  【集成版本性能测试】燥点小视频Android V1.4 .msg  客户端性能测试.pptx
docs/: CNAME  index.md
public/: apm.py
report/100人抢红包/: result.json
report/直播1小时/: result.json
solox/: .gitignore  __init__.py  __main__.py  debug.py  web.py
solox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
solox/mobileperf/: __init__.py
solox/mobileperf/android/: __init__.py  cpu_top.py  dataworker.py  devicemonitor.py  excel.py  fd.py  fps.py  globaldata.py  logcat.py  meminfos.py  monkey.py  powerconsumption.py  report.py  startup.py  thread_num.py  trafficstats.py
solox/mobileperf/common/: basemonitor.py  (+2 more)
solox/public/: __init__.py  _iosPerf.py  adb.py  android_fps.py  apm.py  apm_pk.py  common.py  config.json  fps.py  fps_api.py
solox/templates/: 404.html  500.html  analysis.html  analysis_compare.html  analysis_diff.html  analysis_pk.html  base.html  index.html  pk.html  report.html
solox/view/: __init__.py  apis.py  pages.py
templates/: analysis.html  base.html  index.html  report.html
view/: apis.py  apm.py  common.py  pages.py
(+221 files in other folders)
