[metadata]
name = solox
author = Chen Hongqing
author_email = laoqi1988_f1@126.com
summary = tool for apm
license = MIT
home_page = https://github.com/smart-test-ti/SoloX
description_file = README.md
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[entry_points]
console_scripts =
    solox = solox.__main__:main