[metadata]
name = solox
author = Rafa Chen
author-email = rafacheninc@gmail.com
summary = apm cllection tool
license = MIT
home-page = https://github.com/smart-test-ti/SoloX
description-file = README.md
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[entry_points]
console_scripts =
    solox = solox.__main__:main