[metadata]
name = solox
author = Rafa Chen
author_email = rafacheninc@gamil.com
summary = tool for app performance
license = MIT
home_page = https://github.com/smart-test-ti/SoloX
description_file = README.md
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[files]
packages =
	solox

[entry_points]
console_scripts =
    solox = solox.__main__:main